--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Tudo sobre Google Gless</title>
-	<link rel="stylesheet" type="text/css" href="_css/estilo.css.css" />
+	<link rel="stylesheet" href="_css/estilo.css.css" />
 
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
