--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Tudo sobre Google Gless</title>
-	<link rel="stylesheet" href="_css/estilo.css.css" />
+	<link rel="stylesheet" href="css/estilo.css.css" />
 
 </head>
-<script language="javascript" src="_javascript/funcoes.js"></script>
+<script language="javascript" src="javascript/funcoes.js"></script>
 <body>
 	<div id="interface">
 		<header id="cabecalho">
@@ -17,15 +17,15 @@
 				<h2>A revolução do Google está chegando</h2>
 			</hgroup>
 
-			<img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+			<img id="icone" src="imagens/glass-oculos-preto-peq.png">
 			<nav id="menu">
 				<h1>Menu Principal</h1>
 				<ul>
-					<li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
-					<li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
-					<li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
-					<li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
-					<li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+					<li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+					<li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+					<li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+					<li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+					<li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
 				</ul>
 			</nav>
 
@@ -57,7 +57,7 @@
 				tela para o acessório.</p>
 
 			<figure class="foto-legenda">
-				<img src="_imagens/glass-quadro-homem-mulher.png" />
+				<img src="imagens/glass-quadro-homem-mulher.png" />
 				<figcaption>
 					<h3>Google Glass</h3>
 					<p>Uma nova maneira de ver o mundo</p>
@@ -94,8 +94,8 @@
 				o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado,
 				mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-				<video id="filme" controls="controls" poster="_imagens/video-mini03.jpg">
-					<source src="_media/Google Glass- How to use voice actions.mp4" type="video/mp4">
+				<video id="filme" controls="controls" poster="imagens/video-mini03.jpg">
+					<source src="media/Google Glass- How to use voice actions.mp4" type="video/mp4">
 				</video>
 		</article>		
 		</section>
@@ -104,8 +104,8 @@
 			<h1>Outras Notícias</h1>
 			<h2>Vídeo mais recente</h2>
 
-			<video id="filme" controls="controls" poster="_imagens/video-mini03.jpg">
-				<source src="_media/introduction-to-google-glass.mp4" type="video/mp4">
+			<video id="filme" controls="controls" poster="imagens/video-mini03.jpg">
+				<source src="media/introduction-to-google-glass.mp4" type="video/mp4">
 			</video>
 
 			<h2>Novidades no Glass</h2>
