--- a/multimidia.html
+++ b/multimidia.html
@@ -4,12 +4,12 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Tudo sobre Google Gless</title>
-	<link rel="stylesheet" type="text/css" href="_css/estilo.css.css" />
-	<link rel="stylesheet" type="text/css" href="_css/media.css" />
+	<link rel="stylesheet" type="text/css" href="css/estilo.css.css" />
+	<link rel="stylesheet" type="text/css" href="css/media.css" />
 
 
 </head>
-<script language="javascript" src="_javascript/funcoes.js"></script>
+<script language="javascript" src="javascript/funcoes.js"></script>
 <body>
 	<div id="interface">
 		<header id="cabecalho">
@@ -19,15 +19,15 @@
 				<h2>A revolução do Google está chegando</h2>
 			</hgroup>
 
-			<img id="icone" src="_imagens/multimidia.png">
+			<img id="icone" src="imagens/multimidia.png">
 			<nav id="menu">
 				<h1>Menu Principal</h1>
 				<ul>
-					<li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="index.html">Home</a></li>
-					<li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
-					<li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
-					<li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
-					<li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+					<li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="index.html">Home</a></li>
+					<li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
+					<li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
+					<li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
+					<li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -43,10 +43,10 @@
 				</header>
 				<div id="tv-radio">
 					<audio id="musica" controls="controls">
-						<source src="_media/The-Mandalorian.mp3" type="audio/mp3"/>
+						<source src="media/The-Mandalorian.mp3" type="audio/mp3"/>
 					</audio>
-					<video id="filme" controls="controls" poster="_imagens/video-mini03.jpg">
-					<source src="_media/google-glass-how-to-getting-started.mp4" type="video/webm">
+					<video id="filme" controls="controls" poster="imagens/video-mini03.jpg">
+					<source src="media/google-glass-how-to-getting-started.mp4" type="video/webm">
 					</video>
 				</div>
 
